--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,6 @@ cython_debug/
 # dataset
 data/
 
+# model files too large
+utils/caffe_model/hand_detector.caffemodel
+utils/caffe_model/hand_detector.prototxt
