--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "utils/caffemodel2pytorch"]
 	path = utils/caffemodel2pytorch
 	url = https://github.com/vadimkantorov/caffemodel2pytorch
+[submodule "utils/yolov5"]
+	path = utils/yolov5
+	url = https://github.com/ultralytics/yolov5
