--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,4 @@ utils/datasets/*
 
 # model files too large. Only add metrics from best model
 hands_detection/runs/detect/mds_ model
-hands_detection/runs/detect/mds_model_w_aug(best)/weights*
-hands_detection/runs/detect/train10(finetuned)
-hands_detection/runs/detect/train11(finetuned_frozen10)
+detection/hands_detection/runs/detect/best_model
