--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,9 +17,10 @@
             "name": "Hands CNN",
             "type": "python",
             "request": "launch",
-            "program": "cnn/hands_cnn.py",
+            "program": "cnn/main.py",
             "args": [
-                "--detector_path", "hands_detection/runs/detect/mds_model_w_aug(best)/weights/best.pt",
+                "--model", "hands",
+                "--detector_path", "detection/hands_detection/runs/detect/best_model/weights/best.pt",
                 
             ],
             "justMyCode": false
