--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,12 +19,13 @@
             "request": "launch",
             "program": "cnn/main.py",
             "args": [
-                "--model", "hands_inception",
+                "--model", "hands_squeeze",
                 "--detector_path", "detection/hands_detection/runs/detect/best/weights/best.pt",
                 "--optimizer", "SGD",
                 "--batch_size", "64",
                 "--epochs", "60",
-                "--lr", "0.01",
+                "--lr", "0.005",
+                "--weight_decay", "1e-5",
                 
             ],
             "justMyCode": false
