Mv exp archs to separate files/ Improved metric

--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,9 @@ data/v2_cam1_cam2_split_by_driver
 # Pretrained models:
 pretrained_models/
 cnn/hands_models
+cnn/raw_models
+cnn/face_models
+
 
 #processed datasets
 data/datasets/*
