Organized files a bit and updated README

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -90,6 +90,14 @@
             "justMyCode": false
         },
         {
+            "name": "EnsembleTEST",
+            "type": "python",
+            "request": "launch",
+            "program": "ensemble.py",
+            "args": ["--batch_size", "16"],
+            "justMyCode": false
+        },
+        {
             "name": "Ensemble-ALT",
             "type": "python",
             "request": "launch",
