--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,6 @@ utils/datasets/*
 # model files too large. Only add metrics from best model
 detection/hands_detection/runs/detect/best/*
 detection/hands_detection/runs/detect/mds_model_w_aug(best)/weights*
+
+
+conversions/PTL_files
